k8s/k3sa/apps/sites/portfolio/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-portfolio
---
apiVersion: v1
kind: Namespace
metadata:
  name: stage-portfolio
