k8s/k3sa/apps/sites/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nordbye-service
  namespace: portfolio 
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
