k8s/k3sa/apps/sites/portfolio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nordbye-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nordbye.it`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: nordbye-service
          port: 8080
    - match: Host(`www.nordbye.it`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: nordbye-service
          port: 8080
  tls:
    secretName: nordbye-it-tls
